--- a/CommonProblems.wiki
+++ b/CommonProblems.wiki
@@ -14,11 +14,14 @@ Minify currently uses JSMin to remove whitespace from Javascript. Although [http
 
 === Scriptaculous ===
 
-Scriptaculous 1.8.2 (and probably all 1.x) has an [http://github.com/madrobby/scriptaculous/blob/4b49fd8884920d4ee760b0194431f4f433f878df/src/scriptaculous.js#L54 autoloader] that requires a particular HTML and file layout. To serve its files with Minify, just leave out `scriptaculous.js` (it's just for loading). Serve `prototype.js` and the individual support files (e.g. `dragdrop.js`, `effects.js`) and the library should work fine. E.g.:
+Scriptaculous 1.8.2 (and probably all 1.x) has an [http://github.com/madrobby/scriptaculous/blob/4b49fd8884920d4ee760b0194431f4f433f878df/src/scriptaculous.js#L54 autoloader script] that requires files to be in a particular place on disk. To serve Scriptaculous modules with Minify, just serve `prototype.js` and the individual support files (e.g. `dragdrop.js`, `effects.js`) and the library should work fine. E.g.:
 
 {{{
 <script src="/min/f=scriptaculous/lib/prototype.js" type="text/javascript"></script>
 <script src="/min/b=scriptaculous/src&amp;f=effects.js,dragdrop.js" type="text/javascript"></script>
+<script type="text/javascript">
+/* DragDrop and Effects modules can be used here. */
+</script>
 }}}
 
 == Cache files won't update ==
