--- a/FAQ.wiki
+++ b/FAQ.wiki
@@ -45,4 +45,4 @@ It appears http://lifehacker.com/ and other [http://gawker.com/ Gawker]-related 
 
 == Can I use it with my commercial website or product? ==
 
-Yes. Minify is distributed under the [http://www.opensource.org/licenses/bsd-license.php New BSD License], which means that you're free to use, modify, and redistribute Minify or derivative works thereof, even for commercial purposes, as long as you comply with a few simple requirements. See the [http://minify.googlecode.com/svn/trunk/LICENSE LICENSE] file for details.
+Yes. Minify is distributed under the [http://www.opensource.org/licenses/bsd-license.php New BSD License], which means that you're free to use, modify, and redistribute Minify or derivative works thereof, even for commercial purposes, as long as you comply with a few simple requirements. See the [http://code.google.com/p/minify/source/browse/trunk/LICENSE.txt LICENSE.txt] file for details.
