--- a/CustomSource.wiki
+++ b/CustomSource.wiki
@@ -3,7 +3,7 @@
 
 == Custom Source ==
 
-In `groupsConfig.php`, usually you specify source file paths using strings like `'//js/file1.js'` (short for `$_SERVER['DOCUMENT_ROOT'].'/js/file1.js'` ).
+In `groupsConfig.php`, usually you specify source file paths using strings like `/path/to/file.js` or `//js/file1.js` (shorthand for `$_SERVER['DOCUMENT_ROOT'].'/js/file1.js'` ).
 
 Instead of a string, you may substitute a "source object" (an instance of class [http://code.google.com/p/minify/source/browse/tags/release_2.1.3/min/lib/Minify/Source.php Minify_Source]). This allows you to customize how minification is applied, and/or pull content from a non-file location (e.g. a URL). 
 
