--- a/CustomServer.wiki
+++ b/CustomServer.wiki
@@ -19,7 +19,7 @@ set_include_path('/path/to/min/lib' . PATH_SEPARATOR . get_include_path());
 
 == Set up caching ==
 
-Minify 2.1.3 ships with [http://code.google.com/p/minify/source/browse/tags/release_2.1.3/min/lib/Minify/Cache/ cache classes] for files, APC, and memcache. Choose one, instantiate it, and pass it to Minify:
+Minify ships with [http://code.google.com/p/minify/source/browse/tags/release_2.1.3/min/lib/Minify/Cache/ cache classes] for files, APC, and memcache. Choose one, instantiate it, and pass it to Minify:
 {{{
 require 'Minify.php';
 require 'Minify/Cache/File.php';
@@ -27,88 +27,74 @@ require 'Minify/Cache/File.php';
 Minify::setCache(new Minify_Cache_File()); // files in directory chosen by Solar_Dir
 }}}
 
+== Choose a Minify controller ==
 
+Minify uses controller classes to validate requests and choose which sources are to be served.
 
+The [http://code.google.com/p/minify/source/browse/tags/release_2.1.3/min/lib/Minify/Controller/Files.php#9 Files] controller ignores all details about HTTP requests. It just serves an array of sources (file paths or CustomSources).
 
+The [http://code.google.com/p/minify/source/browse/tags/release_2.1.3/min/lib/Minify/Controller/Groups.php Groups] controller takes an associative array (say `$groups`) of source arrays, and chooses the array to serve based on `$_SERVER['PATH_INFO']`. E.g. if you request `http://example.org/myServer.php/keyName`, the controller will serve the sources in `$groups['keyName']`.
 
+Files is simple. We'll use it here.
 
+== Set up service and controller options ==
 
-= Previous Releases =
+A single array is used for configuration, and is passed to the `Minify::serve` method. `serve` passes it to the controller, which picks off the keys it needs and returns it to `serve` for Minify's own built-in [http://code.google.com/p/minify/source/browse/tags/release_2.1.3/min/lib/Minify.php#88 options]. This architecture allows the controller to set defaults for `serve`.
 
-The following info applies only to the Minify 2.0 releases. Most users will not need to do any of this as of version 2.1.
+The Files controller only needs one key: `files`, an array of file paths or CustomSources to be served on every request.
+
+The only `serve` key we care about is `maxAge`, since the default is only 1800 seconds.
+
+{{{
+$options = array(
+    // options for the controller
+    'files'  => array('//js/file1.js', '//js/file2.js', $src),
+    // options for Minify::serve
+    'maxAge' => 86400
+);
+}}}
+(In the above $src is a [CustomSources custom Minify_Source object].)
+
+== Handle the request ==
+
+{{{
+Minify::serve('Files', $options);
+}}}
+
+That's it...
+
+= The Request Cycle =
+
+`Minify::serve` does a number of operations. It...
+
+  # creates a controller object `$ctrl` (unless you pass it a readymade object).
+  # calls `$ctrl->setupSources($options)`, which analyzes the request and sets `$ctrl->sources` accordingly to an array of Minify_Source objects.
+  # calls `$ctrl->analyzeSources($options)`, which set `$options` keys for `contentType` and `lastModifiedTime`, based on the sources.
+  # calls `$ctrl->mixInDefaultOptions($options)`, which mixes in the controller's default options.
+  # determines if the browser accepts gzip using `HTTP_Encoder`
+  # allows conditional GETs (optionally abandoning the request) using `HTTP_ConditionalGet`
+  # validates the server cache. If it needs refreshing, `Minify::_combineMinify` is called, which...
+     # calls `$source->getContent` on each source
+     # the content is combined before or after minification (depending on individual source options)
+  # sets up headers to be sent
+  # either returns the headers and content in an array (if `quiet` is set), or sends it to the browser.
+
 
 == Using the Groups controller ==
 
-We're going to build a small PHP file that calls `Minify::serve()`, turning it into an HTTP server for our Javascript and CSS.
-
-1. Place the following code in a file "min.php" in your root web directory.
-
 {{{
-<?php
-
-// Prepends include_path. You could alternately do this via .htaccess or php.ini
-set_include_path( 
-    '/full/path/to/minify/lib'
-    . PATH_SEPARATOR . get_include_path()
+$options = array(
+    'groups' => array(
+        'js'  => array('//js/file1.js', '//js/file2.js'),
+        'css' => array('//css/file1.css', '//css/file2.css'),
+    ),
 );
-
-require 'Minify.php';
-Minify::setCache(); // in 2.0 was "useServerCache"
-Minify::serve('Groups', array(
-    'groups' => array()
-));
+Minify::serve('Groups', $options);
 }}}
 
-2. Open a non-IE/win web browser to http://example.com/min.php/ (IE/win will not display Javascript files directly.)
+With the above, if you request `http://example.org/myServer.php/css`, the two CSS files will be served.
 
-You should see "HTTP/1.0 400 Bad Request". Minify is working, let's give it something to serve.
-
-*Terminology:* From here on I'll use "minify URI" to mean a URI that points to a Minify server, like "min.php/" in our example.
-
-3. Note the file paths of a few Javascript files you'd like to serve together. If they're in the same webroot as your minifying script, we can substitue "//" for the DOCUMENT_ROOT.
-
-E.g.: `'//js/jQuery.js'` is a shortcut for `"{$_SERVER['DOCUMENT_ROOT']}/js/jQuery.js"`.
-
-*Note:* Use file paths, not HTTP URIs. `/file.js` would result in PHP looking for file.js in the root directory of a Unix-ish filesystem. 
-
-To specify a file on a different virtual host, don't use `http://example.com/file.js`, instead give its path from root: `/home/user/example.com/file.js`.
-
-4. Add them to the 'groups' array inside the `Minify::serve()` call, like this:
-
-{{{
-Minify::serve('Groups', array(
-    'groups' => array(
-        'js1' => array('//js/yourFile1.js', '//js/yourFile2.js')
-    )
-));
-}}}
-
-5. Browse to http://example.com/min.php/js1
-
-After a brief delay (on the first request PHP has to compress the files), you'll receive a single minified Javascript file containing the code of "yourFile1.js" and "yourFile2.js". The file will also be sent with deflate or gzip encoding, depending on your browser.
-
-6. Now you can use "/min.php/js1" as the src attribute for (X)HTML SCRIPT elements.
-
-== Serving more combinations of files, including CSS ==
-
-You can add more elements to the "groups" array to serve more files. E.g.:
-
-{{{
-Minify::serve('Groups', array(
-    'groups' => array(
-        'js1' => array('//js/yourFile1.js', '//js/yourFile2.js')
-        ,'js2' => array('//js/yourFile1.js', '//js/yourFile3.js')
-        ,'jQuery' => array('//js/jquery-1.2.6.js')
-        ,'css' => array('//css/layout.css', '//css/fonts.css')
-    )
-));
-}}}
-
-Now you can also use these URLs:
-
-  * http://example.com/min.php/js2
-  * http://example.com/min.php/jQuery (serve jQuery by itself)
-  * http://example.com/min.php/css (serve CSS)
+<wiki:comment>Move somewhere else
 
 == Sending far future Expires headers ==
 
@@ -166,28 +152,4 @@ Now "min.php" will serve files with Expires headers, causing the browser to alwa
 
 When you make a change to any of your source Javascript/CSS files, your HTML file will have a different querystring appended to the minify URIs, causing the browser to download it as a new URL, and Minify will automatically rebuild its cache files on the server.
 
-== Fixing URIs in CSS files (not required as of 2.1) ==
-
-If you serve CSS with Minify you may notice your relative URIs in your CSS no longer point to the right places. To fix this, `serve()` can be pass an option to the CSS minifier that will prepend a string to all relative URIs. E.g.:
-
-{{{
-$serveOptions = array(
-    'groups' => (require '_groupsConfig.php')
-    ,'maxAge' => 31536000 // 1 yr
-    // in 2.0 was 'setExpires' => $_SERVER['REQUEST_TIME'] + 31536000
-);
-// pass the 'prependRelativePath' to the CSS minifier:
-$serveOptions['minifierOptions'][Minify::TYPE_CSS]['prependRelativePath'] = '/css/';
-Minify::serve('Groups', $serveOptions);
-}}}
-
-*Note:* Before 2.0.2b replace `['minifierOptions']` with `['perType']`.
-
-*Note:* In version 2.1, this section will be unneeded as relative URIs are automatically fixed for you.
-
-=== Notes ===
-
-  * You can name "min.php" anything you like (as long as it's executed as PHP) and place it anywhere in webroot. In the examples it's often "m.php".
-  * You can use MultiViews or mod_rewrite to allow minify URIs like "/min/js" if you prefer. The "Groups" controller just expects a PATH_INFO server variable like "/js".
-  * You can use multiple "min.php" files for serving with different options. E.g. If you want to use conditional GET on some requests, just make a copy of "min.php" without the 'setExpires' option and rename it something like "cgmin.php".
-  * More [http://code.google.com/p/minify/source/browse/trunk/min/lib/Minify.php#76 serve options] are documented in the source.
+</wiki:comment>
