Edited wiki page through web user interface.

--- a/CookBook.wiki
+++ b/CookBook.wiki
@@ -1,5 +1,5 @@
 #summary Solutions for more complex Minify configurations
-#labels Phase-Deploy
+#labels Phase-Deploy,Featured
 
 Unless mentioned, all the following snippets go in `min/config.php`.
 
