--- a/CommonProblems.wiki
+++ b/CommonProblems.wiki
@@ -3,6 +3,15 @@
 
 If this page doesn't help, please post a question on our [http://groups.google.com/group/minify Google group].
 
+== Files aren't cached in IE6 ==
+
+If you have 2.1.3:
+
+  # Open `/min/lib/HTTP/Encoder.php`
+  # On line [http://code.google.com/p/minify/source/browse/tags/release_2.1.3/min/lib/HTTP/Encoder.php#62 62], change `false` to `true`.
+
+Details on the [http://code.google.com/p/minify/issues/detail?id=126 issue] page, but basically this allows sending gzipped content to IE6 and (more importantly) allows IE6 to cache it.
+
 == Builder Fails / 400 Errors ==
 
 With URLs like `/min/f=...`, Minify is paranoid about not serving files outside of `$_SERVER['DOCUMENT_ROOT']`. If you're trying to serve files that are actually symlinks (or in a symlinked folder) to files outside of the DOC_ROOT, Minify won't allow it by default.
