--- a/CookBook.wiki
+++ b/CookBook.wiki
@@ -24,6 +24,16 @@ $memcache->connect('localhost', 11211);
 $min_cachePath = new Minify_Cache_Memcache($memcache);
 }}}
 
+== (Slightly) Better Javascript Compression ==
+
+Minify 2.1.3 comes with Tino Zijdel's [http://crisp.tweakblogs.net/blog/1665/a-new-javascript-minifier-jsmin+.html JSMin+] 1.1. This is a full parser based on a port of [http://en.wikipedia.org/wiki/Narcissus_(JavaScript_engine) Narcissus]. To try it out:
+{{{
+$min_serveOptions['minifiers']['application/x-javascript'] = array('JSMinPlus', 'minify');
+}}}
+This should yield smaller javascript files, but I've tested this only briefly. For production you may want to get the [http://crisp.tweakblogs.net/blog/cat/716 latest version] (you must rename it: `min/lib/JSMinPlus.php`).
+
+Note: JSMin+ has no [http://code.google.com/p/minify/source/browse/tags/release_2.1.3/min/lib/JSMin.php#10 comment preservation] as of 1.3, in case you rely on this.
+
 == Server-specific Options ==
 
 You may need to have different options depending on what server you're on. You can do this just how you'd expect:
