--- a/CookBook.wiki
+++ b/CookBook.wiki
@@ -10,7 +10,7 @@ By default, Minify uses [http://code.google.com/p/minify/source/browse/tags/rele
 === APC ===
 
 {{{
-require dirname(__FILE__) . '/lib/Minify/Cache/APC.php';
+require 'lib/Minify/Cache/APC.php';
 $min_cachePath = new Minify_Cache_APC();
 }}}
 
@@ -18,7 +18,7 @@ $min_cachePath = new Minify_Cache_APC();
 
 You must create and connect your Memcache object then pass it to `Minify_Cache_Memcache`'s constructor.
 {{{
-require dirname(__FILE__) . '/lib/Minify/Cache/Memcache.php';
+require 'lib/Minify/Cache/Memcache.php';
 $memcache = new Memcache;
 $memcache->connect('localhost', 11211);
 $min_cachePath = new Minify_Cache_Memcache($memcache);
